# parrot

./: README.md  parrot.cabal  stack.yaml
app/: Main.hs  striplogs.hs
src/: Lib.hs
